--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header {
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: lighter;
+   margin: 0px;
 }
 #paragrafoHeader {
    text-align: center;
@@ -41,12 +42,16 @@ header {
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: lighter;
+   margin: 0px;
+   padding-top: 25px;
+   padding-bottom: 20px;
 }
 #menu {
    display: flex;
    flex-direction: row;
    text-align: left;
    margin: auto;
+   background-color: #1A5C38;
 }
 nav > a {
    color: white;
