--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
    margin: 0px;
    height: 100px;
    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.315);
+   padding-bottom: 30px;
 }
 #tituloprincipal {
    text-align: center;
@@ -32,7 +33,7 @@ header {
    font-size: 1.6em;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   font-weight: lighter;
+   font-weight: bold;
    margin: 0px;
 }
 #paragrafoHeader {
@@ -42,9 +43,8 @@ header {
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: lighter;
-   margin: 0px;
+   margin: 5px 0px 0px 0px;
    padding-top: 25px;
-   padding-bottom: 20px;
 }
 #menu {
    display: flex;
@@ -56,9 +56,9 @@ header {
 nav > a {
    color: white;
    text-decoration: none;
-   margin: 1px 10px;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.575);
    transition-duration: 0.5s;
+   padding-left: 26px;
 }
 nav > a:hover {
    text-decoration: underline;
@@ -71,7 +71,7 @@ main {
    max-width: 820px;
    margin: auto;
    padding: 10px;
-   margin-bottom: 20px;
+   margin-bottom: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
    border-bottom-right-radius: 7px;
    border-bottom-left-radius: 7px
