--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ main {
    min-width: 280px;
    max-width: 820px;
    margin: auto;
-   padding: 10px;
+   padding: 10px 20px;
    margin-bottom: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
    border-bottom-right-radius: 7px;
@@ -110,6 +110,9 @@ main strong {
    border-right: 10px solid #1A5C38;
    margin: 10px -10px;
    padding: 20px;
+}
+.source {
+   width: 100%;
 }
 #extra {
    background-color: #C5EBD6;
