--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
    margin: 0px;
    background-color: #84E1AD;
    width: 100%;
+   height: 100%;
 }
 p {
    text-indent: 30px;
@@ -93,10 +94,11 @@ main strong {
    color: #1A5C38;
    background-image: linear-gradient(to right, #bee6cfcc , #bddfcbbb, white);
 }
-#IrinaBlok {
+.IrinaBlok {
    display: block;
-   margin: 10px auto;
+   margin: 10px;
    margin-left: 10px;
+   width: 100%;
 }
 #droid {
    display: block;
